--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,31 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
+            <!--只参与Maven test，不进行发布-->
+            <scope>test</scope>
         </dependency>
 
+<!--        日志输出依赖-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.3.0-alpha5</version>
         </dependency>
+<!--                Freemarker依赖-->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.31</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <!--依赖只参与编译测试，不进行发布-->
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
 
